--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,8 +18,8 @@ nav:
     - 开发语言:
         - Go语言开发:
             - 开发环境搭建:
-                - Go语言Ubuntu开发环境搭建: 开发语言/Go语言开发/开发环境搭建/Go语言Ubuntu开发环境搭建.md
-                - Go语言Windows开发环境搭建: 开发语言/Go语言开发/开发环境搭建/Go语言Windows开发环境搭建.md
+                - Ubuntu开发环境搭建: 开发语言/Go语言开发/开发环境搭建/Go语言Ubuntu开发环境搭建.md
+                - Windows开发环境搭建: 开发语言/Go语言开发/开发环境搭建/Go语言Windows开发环境搭建.md
                 - 模块管理: 开发语言/Go语言开发/开发环境搭建/模块管理.md
                 - 可执行文件压缩: 开发语言/Go语言开发/开发环境搭建/可执行文件压缩.md
         - Java语言开发:
