--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,14 +24,27 @@ nav:
                 - 使用IDEA配置Maven:  开发语言/Java语言开发/开发环境搭建/使用IDEA配置Maven.md
                 - SpringBoot第一个程序: 开发语言/Java语言开发/开发环境搭建/SpringBoot第一个程序.md
                 - Dockerfile部署SpringBoot项目: 开发语言/Java语言开发/开发环境搭建/IDEA连接远程服务器Docker部署SpringBoot项目.md
-    - 计算机网络:
-        - HTTP/HTTPS:
-            - 30张图解HTTP常见的面试题: 计算机网络/HTTP与HTTPS/30张图解HTTP常见的面试题.md
-            - URI和URL区别和关联: 计算机网络/HTTP与HTTPS/URI和URL区别和关联.md
     - 中间件:
         - Mysql:
             - 如何开启慢Sql日志: 中间件/Mysql/如何开启慢Sql日志.md
             - 如何设置数据表字符编码: 中间件/Mysql/如何设置数据表字符编码.md
+    - 计算机网络:
+        - HTTP/HTTPS:
+            - 30张图解HTTP常见的面试题: 计算机网络/HTTP与HTTPS/30张图解HTTP常见的面试题.md
+            - URI和URL区别和关联: 计算机网络/HTTP与HTTPS/URI和URL区别和关联.md
+    - 设计模式(23种):
+        - 装饰器模式: 设计模式/装饰器模式.md
+    - 领域驱动设计:
+        - 参考系列文章: 领域驱动设计/参考系列文章.md
+        - 开源架构: 领域驱动设计/开源架构.md
+        - 程序目录结构: 领域驱动设计/程序目录结构.md
+        - 内部博客系列:
+            - 1.开篇: 领域驱动设计/内部博客系列/1.开篇.md
+            - 2.聚合: 领域驱动设计/内部博客系列/2.聚合.md
+            - 3.存储库: 领域驱动设计/内部博客系列/3.存储库.md
+            - 4.领域服务: 领域驱动设计/内部博客系列/4.领域服务.md
+            - 5.应用服务: 领域驱动设计/内部博客系列/5.应用服务.md
+            - 6.六边形架构: 领域驱动设计/内部博客系列/6.六边形架构.md
     - Docker开发技术:
         - 环境搭建: Docker开发技术/Ubuntu20.04上安装和使用Docker.md
     - Kubernetes开发技术:
@@ -69,24 +82,11 @@ nav:
             - 使用指南: 文档管理/MkDocs文档系统/使用指南.md
         - Markdown文档编写指南: 文档管理/Markdown文档编写指南.md
         - Seafile文件服务器搭建: 文档管理/Seafile文件服务器搭建.md  
-    - Gitlab私有仓库搭建: 
+    - 私有仓库搭建: 
         - 使用Docker部署Gitlab: Gitlab私有仓库搭建/使用Docker部署Gitlab.md
         - gitlab设置中文:  Gitlab私有仓库搭建/gitlab设置中文.md
         - Gitlab定时备份: Gitlab私有仓库搭建/Gitlab定时备份.md
         - Gitlab配置邮件服务: Gitlab私有仓库搭建/Gitlab配置邮件服务.md
-    - 设计模式(23种):
-        - 装饰器模式: 设计模式/装饰器模式.md
-    - 领域驱动设计:
-        - 参考系列文章: 领域驱动设计/参考系列文章.md
-        - 开源架构: 领域驱动设计/开源架构.md
-        - 程序目录结构: 领域驱动设计/程序目录结构.md
-        - 内部博客系列:
-            - 1.开篇: 领域驱动设计/内部博客系列/1.开篇.md
-            - 2.聚合: 领域驱动设计/内部博客系列/2.聚合.md
-            - 3.存储库: 领域驱动设计/内部博客系列/3.存储库.md
-            - 4.领域服务: 领域驱动设计/内部博客系列/4.领域服务.md
-            - 5.应用服务: 领域驱动设计/内部博客系列/5.应用服务.md
-            - 6.六边形架构: 领域驱动设计/内部博客系列/6.六边形架构.md
     - 操作系统相关:     
         - Ubuntu相关知识:
             - Ubuntu修改DNS: 操作系统相关知识/Ubuntu/Ubuntu修改DNS.md  
