--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,7 +84,7 @@ nav:
             - 使用指南: 文档管理/MkDocs文档系统/使用指南.md
         - Markdown文档编写指南: 文档管理/Markdown文档编写指南.md
         - Seafile文件服务器搭建: 文档管理/Seafile文件服务器搭建.md  
-    - 私有仓库搭建: 
+    - 私有代码仓库: 
         - 使用Docker部署Gitlab: Gitlab私有仓库搭建/使用Docker部署Gitlab.md
         - gitlab设置中文:  Gitlab私有仓库搭建/gitlab设置中文.md
         - Gitlab定时备份: Gitlab私有仓库搭建/Gitlab定时备份.md
