新增Null值是如何存放的

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
         - Mysql:
             - 如何开启慢Sql日志: 中间件/Mysql/如何开启慢Sql日志.md
             - 如何设置数据表字符编码: 中间件/Mysql/如何设置数据表字符编码.md
+            - Null值是如何存放的: 中间件/Mysql/Null值是如何存放的.md
     - 计算机操作系统:
         - 硬件结构: 
             - CPU是如何执行程序的: 计算机操作系统/硬件结构/CPU是如何执行程序的.md
