--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ nav:
         - HTTP/HTTPS:
             - 30张图解HTTP常见的面试题: 计算机网络/HTTP与HTTPS/30张图解HTTP常见的面试题.md
             - URI和URL区别和关联: 计算机网络/HTTP与HTTPS/URI和URL区别和关联.md
+            - 有了HTTP协议为什么还要有websocket协议: 计算机网络/HTTP与HTTPS/有了HTTP协议为什么还要有websocket协议.md
     - 分布式系统:
         - 一致性Hash算法: 分布式系统/一致性Hash算法.md
     - 设计模式(23种):
