--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,11 +106,14 @@ nav:
             - 使用NSIS制作安装包: 操作系统相关知识/Windows/使用NSIS制作安装包.md
         - 再生龙:
             - 再生龙备份还原操作系统: 操作系统相关知识/再生龙/再生龙备份还原操作系统.md
+extra:
+  social:
+    - icon: fontawesome/solid/paper-plane
+      link: mailto:<email-address>
 theme:
     name: 'material'
     favicon: assets/image/favicon.ico
     logo: assets/image/favicon.ico
-    link: https://twitter.com/squidfunk
     feature:
         tabs: false
 
