--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,9 +37,8 @@ nav:
             - 30张图解HTTP常见的面试题: 计算机网络/HTTP与HTTPS/30张图解HTTP常见的面试题.md
             - URI和URL区别和关联: 计算机网络/HTTP与HTTPS/URI和URL区别和关联.md
             - 有了HTTP协议为什么还要有websocket协议: 计算机网络/HTTP与HTTPS/有了HTTP协议为什么还要有websocket协议.md
-    - 分布式系统:
-        - 一致性Hash算法: 分布式系统/一致性Hash算法.md
-        - 微服务和分布式的区别和联系: 分布式系统/微服务和分布式的区别和联系.md
+    - 微服务与分布式:
+        - 一致性Hash算法: 微服务与分布式/一致性Hash算法.md
     - 设计模式(23种):
         - 装饰器模式: 设计模式/装饰器模式.md
     - 领域驱动设计:
