--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,8 +106,8 @@ nav:
             - 再生龙备份还原操作系统: 操作系统相关知识/再生龙/再生龙备份还原操作系统.md
 theme:
     name: 'material'
-    favicon: ./favicon.ico
-    logo: ./favicon.ico
+    favicon: favicon.ico
+    logo: favicon.ico
     feature:
         tabs: false
 
