--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,12 +81,7 @@ nav:
         - Jenkins:
             - 自动化部署SpringBoot项目:  持续集成/Jenkins/Jenkins自动化部署SpringBoot项目.md         
     - 文档管理:
-        - MkDocs文档系统:
-            - 系统搭建: 文档管理/MkDocs文档系统/系统搭建.md
-            - 编译与部署: 文档管理/MkDocs文档系统/编译与部署.md
-            - 使用指南: 文档管理/MkDocs文档系统/使用指南.md
-        - Markdown文档编写指南: 文档管理/Markdown文档编写指南.md
-        - Seafile文件服务器搭建: 文档管理/Seafile文件服务器搭建.md  
+        - Seafile与Mkdocs部署: 文档管理/Seafile与Mkdocs部署.md
     - 代码私有仓库部署: 
         - 使用Docker部署Gitlab: Gitlab私有仓库搭建/使用Docker部署Gitlab.md
         - gitlab设置中文:  Gitlab私有仓库搭建/gitlab设置中文.md
