--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,6 +101,7 @@ nav:
             - 再生龙备份还原操作系统: 操作系统相关知识/再生龙/再生龙备份还原操作系统.md
 theme:
     name: 'material'
+    site_favicon: favicon.ico
     favicon: favicon.ico
     logo: favicon.ico
     feature:
