--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,10 @@
 site_name: 许鹏的学习文档
+theme:
+    name: 'material'
+    favicon: favicon.ico
+    logo: favicon.ico
+    feature:
+        tabs: false
 nav:
     - 目录: index.md
     - 开发环境搭建:
@@ -99,12 +105,6 @@ nav:
             - 使用NSIS制作安装包: 操作系统相关知识/Windows/使用NSIS制作安装包.md
         - 再生龙:
             - 再生龙备份还原操作系统: 操作系统相关知识/再生龙/再生龙备份还原操作系统.md
-theme:
-    name: 'material'
-    favicon: favicon.ico
-    logo: logo.jpg
-    feature:
-        tabs: false
 
 markdown_extensions:
     - admonition
