新增创建型模式

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,13 @@ nav:
         - HTTP和RPC的区别: 微服务与分布式/HTTP和RPC的区别.md
         - 一致性Hash算法: 微服务与分布式/一致性Hash算法.md
     - 设计模式(23种):
-        - 装饰器模式: 设计模式/装饰器模式.md
+        - 创建型模式: 
+            - 简单工厂模式: 设计模式/创建型模式/简单工厂模式.md
+            - 工厂方法模式: 设计模式/创建型模式/工厂方法模式.md
+            - 抽象工厂模式: 设计模式/创建型模式/抽象工厂模式.md
+            - 建造者模式: 设计模式/创建型模式/建造者模式.md
+            - 原型模式: 设计模式/创建型模式/原型模式.md
+            - 单例模式: 设计模式/创建型模式/单例模式.md
     - 领域驱动设计:
         - 参考系列文章: 领域驱动设计/参考系列文章.md
         - 开源架构: 领域驱动设计/开源架构.md
