--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,8 @@ nav:
             - 建造者模式: 设计模式/创建型模式/建造者模式.md
             - 原型模式: 设计模式/创建型模式/原型模式.md
             - 单例模式: 设计模式/创建型模式/单例模式.md
+        - 结构型模式:
+            - 外观模式: 设计模式/结构型模式/外观模式.md
     - 领域驱动设计:
         - 参考系列文章: 领域驱动设计/参考系列文章.md
         - 开源架构: 领域驱动设计/开源架构.md
