新增代理模式

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,7 @@ nav:
         - 结构型模式:
             - 外观模式: 设计模式/结构型模式/外观模式.md
             - 适配器模式: 设计模式/结构型模式/适配器模式.md
+            - 代理模式: 设计模式/结构型模式/代理模式.md
     - 领域驱动设计:
         - 参考系列文章: 领域驱动设计/参考系列文章.md
         - 开源架构: 领域驱动设计/开源架构.md
