新增桥接模式

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
             - 组合模式: 设计模式/结构型模式/组合模式.md
             - 享元模式: 设计模式/结构型模式/享元模式.md
             - 装饰模式: 设计模式/结构型模式/装饰模式.md
+            - 桥接模式: 设计模式/结构型模式/桥接模式.md
     - 领域驱动设计:
         - 参考系列文章: 领域驱动设计/参考系列文章.md
         - 开源架构: 领域驱动设计/开源架构.md
