--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,8 @@ nav:
             - 享元模式: 设计模式/结构型模式/享元模式.md
             - 装饰模式: 设计模式/结构型模式/装饰模式.md
             - 桥接模式: 设计模式/结构型模式/桥接模式.md
+        - 行为型模式:
+            - 中介者模式: 设计模式/行为型模式/中介者模式.md
     - 领域驱动设计:
         - 参考系列文章: 领域驱动设计/参考系列文章.md
         - 开源架构: 领域驱动设计/开源架构.md
