--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,7 @@ nav:
         - 行为型模式:
             - 中介者模式: 设计模式/行为型模式/中介者模式.md
             - 观察者模式: 设计模式/行为型模式/观察者模式.md
+            - 命令模式: 设计模式/行为型模式/命令模式.md
     - 领域驱动设计:
         - 参考系列文章: 领域驱动设计/参考系列文章.md
         - 开源架构: 领域驱动设计/开源架构.md
