--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,7 @@ nav:
             - 迭代器模式: 设计模式/行为型模式/迭代器模式.md
             - 模板方法模式: 设计模式/行为型模式/模板方法模式.md
             - 策略模式: 设计模式/行为型模式/策略模式.md
+            - 状态模式: 设计模式/行为型模式/状态模式.md
     - 领域驱动设计:
         - 参考系列文章: 领域驱动设计/参考系列文章.md
         - 开源架构: 领域驱动设计/开源架构.md
