--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,6 +68,7 @@ nav:
             - 状态模式: 设计模式/行为型模式/状态模式.md
             - 备忘录模式: 设计模式/行为型模式/备忘录模式.md
             - 解释器模式: 设计模式/行为型模式/解释器模式.md
+            - 责任链模式: 设计模式/行为型模式/责任链模式.md
     - 领域驱动设计:
         - 参考系列文章: 领域驱动设计/参考系列文章.md
         - 开源架构: 领域驱动设计/开源架构.md
