--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,15 +42,15 @@ nav:
         - 微服务和分布式的区别和联系: 微服务与分布式/微服务和分布式的区别和联系.md
         - HTTP和RPC的区别: 微服务与分布式/HTTP和RPC的区别.md
         - 一致性Hash算法: 微服务与分布式/一致性Hash算法.md
-    - 设计模式(23种):
-        - 创建型模式: 
+    - 设计模式(24种):
+        - 创建型模式(6种): 
             - 简单工厂模式: 设计模式/创建型模式/简单工厂模式.md
             - 工厂方法模式: 设计模式/创建型模式/工厂方法模式.md
             - 抽象工厂模式: 设计模式/创建型模式/抽象工厂模式.md
             - 建造者模式: 设计模式/创建型模式/建造者模式.md
             - 原型模式: 设计模式/创建型模式/原型模式.md
             - 单例模式: 设计模式/创建型模式/单例模式.md
-        - 结构型模式:
+        - 结构型模式(7种):
             - 外观模式: 设计模式/结构型模式/外观模式.md
             - 适配器模式: 设计模式/结构型模式/适配器模式.md
             - 代理模式: 设计模式/结构型模式/代理模式.md
@@ -58,7 +58,7 @@ nav:
             - 享元模式: 设计模式/结构型模式/享元模式.md
             - 装饰模式: 设计模式/结构型模式/装饰模式.md
             - 桥接模式: 设计模式/结构型模式/桥接模式.md
-        - 行为型模式:
+        - 行为型模式(11种):
             - 中介者模式: 设计模式/行为型模式/中介者模式.md
             - 观察者模式: 设计模式/行为型模式/观察者模式.md
             - 命令模式: 设计模式/行为型模式/命令模式.md
