新增分布式ACID、CAP、BASE理论

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
         - 微服务和分布式的区别和联系: 微服务与分布式/微服务和分布式的区别和联系.md
         - HTTP和RPC的区别: 微服务与分布式/HTTP和RPC的区别.md
         - 一致性Hash算法: 微服务与分布式/一致性Hash算法.md
+        - 分布式ACID、CAP、BASE理论: 微服务与分布式/分布式ACID、CAP、BASE理论.md
     - 设计模式(24种):
         - 创建型模式(6种): 
             - 简单工厂模式: 设计模式/创建型模式/简单工厂模式.md
