--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,10 +39,11 @@ nav:
             - 有了HTTP协议为什么还要有websocket协议: 计算机网络/HTTP与HTTPS/有了HTTP协议为什么还要有websocket协议.md
             - HTTP的Keep-Alive与TCP的Keep-Alive的区别: 计算机网络/HTTP与HTTPS/HTTP的Keep-Alive与TCP的Keep-Alive的区别.md
     - 微服务与分布式:
+        - 康威定律: 微服务与分布式/康威定律.md
+        - 分布式ACID、CAP、BASE理论: 微服务与分布式/分布式ACID、CAP、BASE理论.md
         - 微服务和分布式的区别和联系: 微服务与分布式/微服务和分布式的区别和联系.md
         - HTTP和RPC的区别: 微服务与分布式/HTTP和RPC的区别.md
         - 一致性Hash算法: 微服务与分布式/一致性Hash算法.md
-        - 分布式ACID、CAP、BASE理论: 微服务与分布式/分布式ACID、CAP、BASE理论.md
     - 设计模式(24种):
         - 创建型模式(6种): 
             - 简单工厂模式: 设计模式/创建型模式/简单工厂模式.md
