--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
                 - Windows开发环境搭建: 开发语言/Go语言开发/开发环境搭建/Go语言Windows开发环境搭建.md
                 - 模块管理: 开发语言/Go语言开发/开发环境搭建/模块管理.md
                 - 可执行文件压缩: 开发语言/Go语言开发/开发环境搭建/可执行文件压缩.md
-            - Go语言基础
+            - Go语言基础:
                 - 变量创建的六种方式: 开发语言/Go语言开发/Go语言基础/变量创建的六种方式.md
         - Java语言开发:
             - 开发环境搭建:
