--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,9 @@ nav:
                 - URI和URL区别和关联: 计算机基础/计算机网络/HTTP与HTTPS/URI和URL区别和关联.md
                 - 有了HTTP协议为什么还要有websocket协议: 计算机基础/计算机网络/HTTP与HTTPS/有了HTTP协议为什么还要有websocket协议.md
                 - HTTP的Keep-Alive与TCP的Keep-Alive的区别: 计算机基础/计算机网络/HTTP与HTTPS/HTTP的Keep-Alive与TCP的Keep-Alive的区别.md
-        - 计算机组成原理: 计算机基础/计算机组成原理/浮点类型在内存中如何存储.md
+        - 计算机组成原理: 
+            - 数据存储:
+                -浮点类型在内存中如何存储: 计算机基础/计算机组成原理/浮点类型在内存中如何存储.md
         - 操作系统:
             - 硬件结构: 
                 - CPU是如何执行程序的: 计算机基础/操作系统/硬件结构/CPU是如何执行程序的.md
