--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,9 +40,12 @@ nav:
                 - HTTP的Keep-Alive与TCP的Keep-Alive的区别: 计算机基础/计算机网络/HTTP与HTTPS/HTTP的Keep-Alive与TCP的Keep-Alive的区别.md
         - 计算机组成原理: 
             - 数据的表示与存储:
-                - 浮点类型在内存中如何存储: 计算机基础/计算机组成原理/浮点类型在内存中如何存储.md
+                - 浮点类型在内存中如何存储: 计算机基础/计算机组成原理/数据的表示与存储/浮点类型在内存中如何存储.md
             - 计算机组成硬件结构: 
-                - CPU是如何执行程序的: 计算机基础/操作系统/计算机组成硬件结构/CPU是如何执行程序的.md
+                - CPU是如何执行程序的: 计算机基础/计算机组成原理/计算机组成硬件结构/CPU是如何执行程序的.md
+        - 操作系统:
+            - 内存管理:
+                - 为什么要有虚拟机内存: 
     - 微服务与分布式:
         - 康威定律: 微服务与分布式/康威定律.md
         - 分布式ACID、CAP、BASE理论: 微服务与分布式/分布式ACID、CAP、BASE理论.md
