--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,7 @@ nav:
                 - CPU是如何执行程序的: 计算机基础/计算机组成原理/计算机组成硬件结构/CPU是如何执行程序的.md
         - 操作系统:
             - 内存管理:
-                - 为什么要有虚拟机内存: 
+                - 为什么要有虚拟机内存: 计算机基础/操作系统/内存管理/为什么要有虚拟机内存.md
     - 微服务与分布式:
         - 康威定律: 微服务与分布式/康威定律.md
         - 分布式ACID、CAP、BASE理论: 微服务与分布式/分布式ACID、CAP、BASE理论.md
