调整目录结构

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,7 @@ nav:
                 - 浮点类型在内存中如何存储: 计算机基础/计算机组成原理/数据的表示与存储/浮点类型在内存中如何存储.md
             - 计算机组成硬件结构: 
                 - CPU是如何执行程序的: 计算机基础/计算机组成原理/计算机硬件结构/CPU是如何执行程序的.md
-        - 操作系统:
+        - 计算机操作系统:
             - 内存管理:
                 - 为什么要有虚拟机内存: 计算机基础/操作系统/内存管理/为什么要有虚拟机内存.md
     - 微服务与分布式:
