--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,7 @@ nav:
                 - 可执行文件压缩: 开发语言/Go语言开发/开发环境搭建/可执行文件压缩.md
             - Go语言基础:
                 - 变量:
-                    - 变量创建的六种方式: 开发语言/Go语言开发/Go语言基础/变量创建的六种方式.md
+                    - 变量创建的六种方式: 开发语言/Go语言开发/Go语言基础/变量/变量创建的六种方式.md
                 - 数据类型: 
                     - -整形与浮点型: 开发语言/Go语言开发/Go语言基础/数据类型/数据类型-整形与浮点型.md
         - Java语言开发:
