--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
                     - 一篇文章理解Go里的函数: 开发语言/Go语言开发/Go语言基础/函数/一篇文章理解Go里的函数.md
                 - 流程控制:
                     - if-else​条件语句: 开发语言/Go语言开发/Go语言基础/流程控制/if-else​条件语句.md
+                    - switch-case选择语句: 开发语言/Go语言开发/Go语言基础/流程控制/switch-case选择语句.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
