--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
                     - if-else​条件语句: 开发语言/Go语言开发/Go语言基础/流程控制/if-else​条件语句.md
                     - switch-case选择语句: 开发语言/Go语言开发/Go语言基础/流程控制/switch-case选择语句.md
                     - for循环语句: 开发语言/Go语言开发/Go语言基础/流程控制/for循环语句.md
+                    - goto无条件跳转: 开发语言/Go语言开发/Go语言基础/流程控制/goto无条件跳转.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
