--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,8 @@ nav:
                     - defer延迟调用: 开发语言/Go语言开发/Go语言基础/流程控制/defer延迟调用.md
                 - 关键字: 
                     - make和new的区别: 开发语言/Go语言开发/Go语言基础/关键字/make和new的区别.md
+                - 语句块与作用域:
+                    - 一篇文章理解Go里的语句块与作用域: 开发语言/Go语言开发/Go语言基础/语句块与作用域/一篇文章理解Go里的语句块与作用域.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
