新增详解信道通道

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
                     - 一篇文章理解Go里的语句块与作用域: 开发语言/Go语言开发/Go语言基础/语句块与作用域/一篇文章理解Go里的语句块与作用域.md
                 - 协程:
                     - goroutine​: 开发语言/Go语言开发/Go语言基础/协程/goroutine​.md
+                    - 详解信道通道: 开发语言/Go语言开发/Go语言基础/协程/详解信道通道.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
