--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
                     - goroutine​: 开发语言/Go语言开发/Go语言基础/协程/goroutine​.md
                     - 详解信道通道: 开发语言/Go语言开发/Go语言基础/协程/详解信道通道.md
                     - WaitGroup: 开发语言/Go语言开发/Go语言基础/协程/WaitGroup.md
+                    - 互斥锁和读写锁: 开发语言/Go语言开发/Go语言基础/协程/互斥锁和读写锁.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
