新增Go语言中关于包导入必学的8个知识点

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,8 @@ nav:
                     - panic和recover: 开发语言/Go语言开发/Go语言基础/协程/panic和recover.md
                 - 版本管理:
                     - 超详细解读GoModules前世今生及入门使用: 开发语言/Go语言开发/Go语言基础/版本管理/超详细解读GoModules前世今生及入门使用.md
+                - 包: 
+                    - Go语言中关于包导入必学的8个知识点: 开发语言/Go语言开发/Go语言基础/包/Go语言中关于包导入必学的8个知识点.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
