--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,8 @@ nav:
                     - 超详细解读GoModules前世今生及入门使用: 开发语言/Go语言开发/Go语言基础/版本管理/超详细解读GoModules前世今生及入门使用.md
                 - 包: 
                     - Go语言中关于包导入必学的8个知识点: 开发语言/Go语言开发/Go语言基础/包/Go语言中关于包导入必学的8个知识点.md
+                - 类型断言: 
+                    - 说说Go语言中的类型断言: 开发语言/Go语言开发/Go语言基础/类型断言/说说Go语言中的类型断言.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
