--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ nav:
                     - WaitGroup: 开发语言/Go语言开发/Go语言基础/协程/WaitGroup.md
                     - 互斥锁和读写锁: 开发语言/Go语言开发/Go语言基础/协程/互斥锁和读写锁.md
                     - panic和recover: 开发语言/Go语言开发/Go语言基础/协程/panic和recover.md
+                    - select: 开发语言/Go语言开发/Go语言基础/协程/select.md
                 - 版本管理:
                     - 超详细解读GoModules前世今生及入门使用: 开发语言/Go语言开发/Go语言基础/版本管理/超详细解读GoModules前世今生及入门使用.md
                 - 包: 
