--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
                 - 面向对象:
                     - 结构体与“继承”: 开发语言/Go语言开发/Go语言基础/面向对象/结构体与“继承”.md
                     - 接口与多态: 开发语言/Go语言开发/Go语言基础/面向对象/接口与多态.md
+                    - 说说Go语言里的空接口: 开发语言/Go语言开发/Go语言基础/面向对象/说说Go语言里的空接口.md
                 - 函数:
                     - 一篇文章理解Go里的函数: 开发语言/Go语言开发/Go语言基础/函数/一篇文章理解Go里的函数.md
                 - 流程控制:
