新增关于接口的三个潜规则

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
                     - 结构体与“继承”: 开发语言/Go语言开发/Go语言基础/面向对象/结构体与“继承”.md
                     - 接口与多态: 开发语言/Go语言开发/Go语言基础/面向对象/接口与多态.md
                     - 说说Go语言里的空接口: 开发语言/Go语言开发/Go语言基础/面向对象/说说Go语言里的空接口.md
+                    - 关于接口的三个潜规则: 开发语言/Go语言开发/Go语言基础/面向对象/关于接口的三个潜规则.md
                 - 函数:
                     - 一篇文章理解Go里的函数: 开发语言/Go语言开发/Go语言基础/函数/一篇文章理解Go里的函数.md
                 - 流程控制:
@@ -65,6 +66,7 @@ nav:
                     - panic和recover: 开发语言/Go语言开发/Go语言基础/协程/panic和recover.md
                     - select: 开发语言/Go语言开发/Go语言基础/协程/select.md
                     - 理解Go语言中的Context: 开发语言/Go语言开发/Go语言基础/协程/理解Go语言中的Context.md
+                    - 如何手动实现一个协程池: 开发语言/Go语言开发/Go语言基础/协程/如何手动实现一个协程池.md
                 - 版本管理:
                     - 超详细解读GoModules前世今生及入门使用: 开发语言/Go语言开发/Go语言基础/版本管理/超详细解读GoModules前世今生及入门使用.md
                 - 包: 
