--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,15 +27,16 @@ nav:
                 - 为什么要有虚拟机内存: 计算机基础/操作系统/内存管理/为什么要有虚拟机内存.md
     - 开发语言:
         - Go语言开发:
-            - 开发环境搭建:
-                - Ubuntu开发环境搭建: 开发语言/Go语言开发/开发环境搭建/Go语言Ubuntu开发环境搭建.md
-                - Windows开发环境搭建: 开发语言/Go语言开发/开发环境搭建/Go语言Windows开发环境搭建.md
+            - 开发环境:
+                - Ubuntu开发环境搭建(带版本管理): 开发语言/Go语言开发/开发环境搭建/Go语言Ubuntu开发环境搭建.md
+                - Windows开发环境搭建(带版本管理): 开发语言/Go语言开发/开发环境搭建/Go语言Windows开发环境搭建.md
                 - 模块管理: 开发语言/Go语言开发/开发环境搭建/模块管理.md
                 - 可执行文件压缩: 开发语言/Go语言开发/开发环境搭建/可执行文件压缩.md
             - Go基础:
                 - Go语言的主要特征: 开发语言/Go语言开发/Go基础/Go语言的主要特征.md
                 - Golang内置类型和函数: 开发语言/Go语言开发/Go基础/Golang内置类型和函数.md
                 - Init函数和main函数: 开发语言/Go语言开发/Go基础/Init函数和main函数.md
+                - 命令: 开发语言/Go语言开发/Go基础/命令.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
