--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
                 - Init函数和main函数: 开发语言/Go语言开发/Go基础/Init函数和main函数.md
                 - 命令: 开发语言/Go语言开发/Go基础/命令.md
                 - 运算符: 开发语言/Go语言开发/Go基础/运算符.md
+                - 下划线: 开发语言/Go语言开发/Go基础/下划线.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
