新增变量与常量

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
                 - 命令: 开发语言/Go语言开发/Go基础/命令.md
                 - 运算符: 开发语言/Go语言开发/Go基础/运算符.md
                 - 下划线: 开发语言/Go语言开发/Go基础/下划线.md
+                - 变量和常量: 开发语言/Go语言开发/Go基础/变量和常量.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
