--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
                 - 变量和常量: 开发语言/Go语言开发/Go基础/变量和常量.md
                 - 基本类型: 开发语言/Go语言开发/Go基础/基本类型.md
                 - 切片Slice: 开发语言/Go语言开发/Go基础/切片Slice.md
+                - Slice底层实现: 开发语言/Go语言开发/Go基础/Slice底层实现.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
