--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
                 - 指针: 开发语言/Go语言开发/Go基础/指针.md
                 - Map: 开发语言/Go语言开发/Go基础/Map.md
                 - Map实现原理: 开发语言/Go语言开发/Go基础/Map实现原理.md
+                - 结构体: 开发语言/Go语言开发/Go基础/结构体.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
