--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,8 @@ nav:
                 - Map: 开发语言/Go语言开发/Go基础/Map.md
                 - Map实现原理: 开发语言/Go语言开发/Go基础/Map实现原理.md
                 - 结构体: 开发语言/Go语言开发/Go基础/结构体.md
+            - 流程控制:
+                - 条件语句if: 开发语言/Go语言开发/流程控制/条件语句if.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
