--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,8 @@ nav:
                 - 条件语句switch: 开发语言/Go语言开发/流程控制/条件语句switch.md
                 - 条件语句select: 开发语言/Go语言开发/流程控制/条件语句select.md
                 - 循环语句for: 开发语言/Go语言开发/流程控制/循环语句for.md
+                - 循环语句range: 开发语言/Go语言开发/流程控制/循环语句range.md
+                - 循环控制Goto、Break、Continue: 开发语言/Go语言开发/流程控制/循环控制Goto、Break、Continue.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
