--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
                 - 函数定义: 开发语言/Go语言开发/函数/函数定义.md
                 - 参数: 开发语言/Go语言开发/函数/参数.md
                 - 返回值: 开发语言/Go语言开发/函数/返回值.md
+                - 匿名函数: 开发语言/Go语言开发/函数/匿名函数.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
