新增单元测试

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,8 @@ nav:
                 - 匿名函数: 开发语言/Go语言开发/函数/匿名函数.md
                 - 闭包、递归: 开发语言/Go语言开发/函数/闭包、递归.md
                 - 延迟调用(defer): 开发语言/Go语言开发/函数/延迟调用(defer).md
+                - 异常处理: 开发语言/Go语言开发/函数/异常处理.md
+                - 单元测试: 开发语言/Go语言开发/函数/单元测试.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
