新增方法定义

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,6 +63,9 @@ nav:
                 - 延迟调用(defer): 开发语言/Go语言开发/函数/延迟调用(defer).md
                 - 异常处理: 开发语言/Go语言开发/函数/异常处理.md
                 - 单元测试: 开发语言/Go语言开发/函数/单元测试.md
+                - 压力测试: 开发语言/Go语言开发/函数/压力测试.md
+            - 方法:     
+                - 方法定义: 开发语言/Go语言开发/方法/方法定义.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
