新增方法集

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,8 @@ nav:
                 - 压力测试: 开发语言/Go语言开发/函数/压力测试.md
             - 方法:     
                 - 方法定义: 开发语言/Go语言开发/方法/方法定义.md
+                - 匿名字段: 开发语言/Go语言开发/方法/匿名字段.md
+                - 方法集: 开发语言/Go语言开发/方法/方法集.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
