--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,9 @@ nav:
                 - 方法集: 开发语言/Go语言开发/方法/方法集.md
                 - 表达式: 开发语言/Go语言开发/方法/表达式.md
                 - 自定义error: 开发语言/Go语言开发/方法/自定义error.md
+            - 面向对象:
+                - 匿名字段: 开发语言/Go语言开发/面向对象/匿名字段.md
+                - 接口: 开发语言/Go语言开发/面向对象/接口.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
