--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,10 +28,10 @@ nav:
     - 开发语言:
         - Go语言开发:
             - 开发环境:
-                - Ubuntu开发环境搭建(带版本管理): 开发语言/Go语言开发/开发环境搭建/Go语言Ubuntu开发环境搭建.md
-                - Windows开发环境搭建(带版本管理): 开发语言/Go语言开发/开发环境搭建/Go语言Windows开发环境搭建.md
-                - 模块管理: 开发语言/Go语言开发/开发环境搭建/模块管理.md
-                - 可执行文件压缩: 开发语言/Go语言开发/开发环境搭建/可执行文件压缩.md
+                - Ubuntu开发环境搭建(带版本管理): 开发语言/Go语言开发/开发环境/Go语言Ubuntu开发环境搭建.md
+                - Windows开发环境搭建(带版本管理): 开发语言/Go语言开发/开发环境/Go语言Windows开发环境搭建.md
+                - 模块管理: 开发语言/Go语言开发/开发环境/模块管理.md
+                - 可执行文件压缩: 开发语言/Go语言开发/开发环境/可执行文件压缩.md
             - Go基础:
                 - Go语言的主要特征: 开发语言/Go语言开发/Go基础/Go语言的主要特征.md
                 - Golang内置类型和函数: 开发语言/Go语言开发/Go基础/Golang内置类型和函数.md
