--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,6 +73,8 @@ nav:
             - 面向对象:
                 - 匿名字段: 开发语言/Go语言开发/面向对象/匿名字段.md
                 - 接口: 开发语言/Go语言开发/面向对象/接口.md
+            - 常用标准库:
+                - fmt: 开发语言/Go语言开发/常用标准库/fmt.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
