--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ nav:
                 - IO操作: 开发语言/Go语言开发/常用标准库/IO操作.md
                 - Strconv: 开发语言/Go语言开发/常用标准库/Strconv.md
                 - Template: 开发语言/Go语言开发/常用标准库/Template.md
+                - Http: 开发语言/Go语言开发/常用标准库/Http.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
