--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ nav:
                 - Strconv: 开发语言/Go语言开发/常用标准库/Strconv.md
                 - Template: 开发语言/Go语言开发/常用标准库/Template.md
                 - Http: 开发语言/Go语言开发/常用标准库/Http.md
+                - Context: 开发语言/Go语言开发/常用标准库/Context.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
