--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,7 @@ nav:
                 - Http: 开发语言/Go语言开发/常用标准库/Http.md
                 - Context: 开发语言/Go语言开发/常用标准库/Context.md
                 - 数据格式: 开发语言/Go语言开发/常用标准库/数据格式.md
+                - 反射: 开发语言/Go语言开发/常用标准库/反射.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
