--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,7 @@ nav:
             - 网络编程:
                 - Socket编程: 
                     - TCP编程: 开发语言/Go语言开发/网络编程/Socket编程/TCP编程.md
+                    - UDP编程: 开发语言/Go语言开发/网络编程/Socket编程/UDP编程.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
