--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,10 @@ nav:
                     - Websocket编程: 开发语言/Go语言开发/网络编程/Websocket编程/Websocket编程.md
                 - MQTT编程: 
                     - MQTT编程: 开发语言/Go语言开发/网络编程/MQTT编程/MQTT编程.md
+            - 数据操作:
+                - Go操作Mysql:
+                    - Mysql使用: 开发语言/Go语言开发/数据操作/Go操作Mysql/Mysql使用.md
+                    - Insert操作: 开发语言/Go语言开发/数据操作/Go操作Mysql/Insert操作.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
