--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,7 @@ nav:
                 - Go操作Mysql:
                     - Mysql使用: 开发语言/Go语言开发/数据操作/Go操作Mysql/Mysql使用.md
                     - Insert操作: 开发语言/Go语言开发/数据操作/Go操作Mysql/Insert操作.md
+                    - Select操作: 开发语言/Go语言开发/数据操作/Go操作Mysql/Select操作.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
