--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,6 +104,8 @@ nav:
                     - Update操作: 开发语言/Go语言开发/数据操作/Go操作Mysql/Update操作.md
                     - Delete操作: 开发语言/Go语言开发/数据操作/Go操作Mysql/Delete操作.md
                     - MySQL事务: 开发语言/Go语言开发/数据操作/Go操作Mysql/MySQL事务.md
+                - Go操作Redis:
+                    - Redis介绍: 开发语言/Go语言开发/数据操作/Go操作Redis/Redis介绍.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
