--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ nav:
                 - Go操作Redis:
                     - Redis介绍: 开发语言/Go语言开发/数据操作/Go操作Redis/Redis介绍.md
                     - 链接Redis: 开发语言/Go语言开发/数据操作/Go操作Redis/链接Redis.md
+                    - String类型Set、Get操作: 开发语言/Go语言开发/数据操作/Go操作Redis/String类型Set、Get操作.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
