新增List队列操作

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,6 +110,7 @@ nav:
                     - String类型Set、Get操作: 开发语言/Go语言开发/数据操作/Go操作Redis/String类型Set、Get操作.md
                     - String批量操作: 开发语言/Go语言开发/数据操作/Go操作Redis/String批量操作.md
                     - 设置过期时间: 开发语言/Go语言开发/数据操作/Go操作Redis/设置过期时间.md
+                    - List队列操作: 开发语言/Go语言开发/数据操作/Go操作Redis/List队列操作.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
