--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,8 @@ nav:
                 - Go操作ETCD: 
                     - ETCD介绍: 开发语言/Go语言开发/数据操作/Go操作ETCD/ETCD介绍.md
                     - 操作ETCD: 开发语言/Go语言开发/数据操作/Go操作ETCD/操作ETCD.md
+                - Go操作Zookeeper:
+                    - 基本操作测试: 开发语言/Go语言开发/数据操作/Go操作Zookeeper/基本操作测试.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
