--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,6 +123,7 @@ nav:
                 - Go操作Kafka:
                     - Kafka介绍: 开发语言/Go语言开发/数据操作/Go操作kafka/Kafka介绍.md
                     - Kafka的安装: 开发语言/Go语言开发/数据操作/Go操作kafka/Kafka的安装.md
+                    - 操作Kafka: 开发语言/Go语言开发/数据操作/Go操作kafka/操作Kafka.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
