新增模型定义

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,6 +128,10 @@ nav:
                     - Go操作Apollo: 开发语言/Go语言开发/数据操作/Go操作Apollo/Go操作Apollo.md
                 - Go操作memcached:
                     - Go操作memcached: 开发语言/Go语言开发/数据操作/Go操作memcached/Go操作memcached.md
+                - Gorm:
+                    - 入门指南: 
+                        - 概览: 开发语言/Go语言开发/数据操作/Gorm/入门指南/概览.md
+                        - 模型定义: 开发语言/Go语言开发/数据操作/Gorm/入门指南/模型定义.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
