--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,6 +134,8 @@ nav:
                         - 模型定义: 开发语言/Go语言开发/数据操作/Gorm/入门指南/模型定义.md
                         - 惯例: 开发语言/Go语言开发/数据操作/Gorm/入门指南/惯例.md
                         - 连接数据库: 开发语言/Go语言开发/数据操作/Gorm/入门指南/连接数据库.md
+                    - CRUD接口:
+                        - 创建: 开发语言/Go语言开发/数据操作/Gorm/CRUD接口/创建.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
