--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,7 @@ nav:
                     - CRUD接口:
                         - 创建: 开发语言/Go语言开发/数据操作/Gorm/CRUD接口/创建.md
                         - 查询: 开发语言/Go语言开发/数据操作/Gorm/CRUD接口/查询.md
+                        - 更新: 开发语言/Go语言开发/数据操作/Gorm/CRUD接口/更新.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
