新增错误处理

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -141,6 +141,7 @@ nav:
                         - 删除: 开发语言/Go语言开发/数据操作/Gorm/CRUD接口/删除.md
                     - 教程:
                         - 链式操作: 开发语言/Go语言开发/数据操作/Gorm/教程/链式操作.md
+                        - 错误处理: 开发语言/Go语言开发/数据操作/Gorm/教程/错误处理.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
