--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -142,6 +142,7 @@ nav:
                     - 教程:
                         - 链式操作: 开发语言/Go语言开发/数据操作/Gorm/教程/链式操作.md
                         - 错误处理: 开发语言/Go语言开发/数据操作/Gorm/教程/错误处理.md
+                        - 钩子: 开发语言/Go语言开发/数据操作/Gorm/教程/钩子.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
