新增原生SQL和SQL生成器

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,6 +143,9 @@ nav:
                         - 链式操作: 开发语言/Go语言开发/数据操作/Gorm/教程/链式操作.md
                         - 错误处理: 开发语言/Go语言开发/数据操作/Gorm/教程/错误处理.md
                         - 钩子: 开发语言/Go语言开发/数据操作/Gorm/教程/钩子.md
+                        - 数据库迁移: 开发语言/Go语言开发/数据操作/Gorm/教程/数据库迁移.md
+                        - 事务: 开发语言/Go语言开发/数据操作/Gorm/教程/事务.md
+                        - 原生SQL和SQL生成器: 开发语言/Go语言开发/数据操作/Gorm/教程/原生SQL和SQL生成器.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
